# cf_ai_local_tools

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUGFIXES.md  CLAUDE.md  COMMANDS.md  CONFIGURATION.md  Cargo.toml  DEVELOPMENT.md  DUCKDUCKGO_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  PRESET_DESIGN.md  PROJECT_SUMMARY.md  PROTOCOL.md  QUICK_REFERENCE.md  README.md  REQUIREMENTS.md  debug_websearch.rs  run_agent_tests.sh  setup.sh  test-fixes.sh  test-integration.sh  test_custom_ddg.sh  test_ddg_fixed.rs  test_ddg_impl.rs  test_duckduckgo_simple.rs  test_manual_integration.sh  test_mouse_move.sh  test_simple.rs  verify_fix.sh
cf-worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cf-worker/src/: index.ts
cf-worker/src/agents/: agent-manager.ts  observation-formatter.ts  react-loop.ts
cf-worker/src/durable-objects/: ConnectionManager.ts  UserSwitchboard.ts
src/: README.md  lib.rs  main.rs
src/agents/: conversation.rs  delegation.rs  mod.rs  presets.rs  prompt_interpolation.rs  prompt_storage.rs  react_loop.rs  registry.rs  storage.rs  thinking.rs
src/config/: interpolation.rs  manager.rs  mod.rs  validation.rs
src/core/: agent.rs  error.rs  mod.rs  tool.rs
src/llm/: client.rs  mod.rs
src/registry/: core.rs  loader.rs  mod.rs  presets.rs
src/tools/: mod.rs  mod.rs.bak  registry.rs
src/utils/: logging.rs  testing.rs
src/websocket/: client.rs  mod.rs  protocol.rs
tests/: integration_orchestration.rs
web-viewer/: index.html  package.json  pnpm-lock.yaml
web-viewer/src/: App.tsx  App.tsx.backup
(+75 files in other folders)
