[package]
name = "cf_ai_local_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rustautogui = "2.4.0"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.22"
websearch = { git = "https://github.com/xynehq/websearch.git" }

[dev-dependencies]
tokio-test = "0.4"
